# cuda-cmake-template

./: CMakeLists.txt  Readme.md  hello_world.cu
cmake/: AutoDetectCudaArch.cmake
include/: common.h  common.hpp  op.h
src/common/: CMakeLists.txt  common.cpp  common.cu  common.h
src/hello/: CMakeLists.txt  hello_world.cu  main.cpp
src/hello/include/: hello.hpp
src/main/: cli.cpp  cli.cu
src/op/: CMakeLists.txt  op.cpp  op.cu  op.h
